<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlanetsApp</string>
    <string name="action_settings">Settings</string>
    <string name="Planets">Planets</string>
    <string name="name">Name</string>
    <string name="mass">Mass</string>
    <string name="radius">Radius</string>
    <string name="new_planet">Add Planet</string>
    <string name="submit">Ok</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_fourth">FourthActivity</string>
    <string name="title_activity_temp">TempActivity</string>

</resources>
